test-cases/valid/reject/duplicate_variable_name.ul
void main() {
    int i;
    float f;
    int i;

    print i;
    print f;
}